--- a/frontend/src/component/bookARoom/BookARoom.css
+++ b/frontend/src/component/bookARoom/BookARoom.css
@@ -14,9 +14,9 @@
 .BookARoom__inputfield {
     margin-top: 40px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-content: center;
-    gap: 60px;
+    gap: 20px;
 }
 
 .BookARoom__inputfield button {
@@ -27,4 +27,10 @@
     border: none;
     color: white;
     font-size: 17px;
+}
+
+@media (max-width: 527px) {
+    .BookARoom__inputfield {
+        flex-direction: column;
+    }
 }
