--- a/frontend/src/component/navbar/Navbar.css
+++ b/frontend/src/component/navbar/Navbar.css
@@ -88,7 +88,7 @@
 
 @media (max-width: 768px) {
     .Navbar {
-        background-color: transparent;
+        background: rgba(0, 0, 0, 0.3);
     }
 
     .Navbar__handburgermenu {
