--- a/frontend/src/component/home/Home.css
+++ b/frontend/src/component/home/Home.css
@@ -13,6 +13,7 @@
     justify-content: space-between;
     align-items: center;
     width: 85%;
+    max-width: 1600px;
     margin: auto;
     padding-bottom: 50px;
 }
