--- a/frontend/src/component/contact/Contact.css
+++ b/frontend/src/component/contact/Contact.css
@@ -1,3 +1,18 @@
 .Contact {
-    padding-top: 100px;
+    padding-top: 80px;
+}
+
+.Content__content {
+    margin: 40px 0;
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .Contact {
+        padding-top: 0px;
+    }
 }
