--- a/frontend/src/element/header/Header.css
+++ b/frontend/src/element/header/Header.css
@@ -14,3 +14,9 @@
     font-weight: 600;
     line-height: 60px;
 }
+
+@media (max-width: 768px) {
+    .Header h1 {
+        font-size: 40px;
+    }
+}
