--- a/frontend/src/component/home/explore/Explore.css
+++ b/frontend/src/component/home/explore/Explore.css
@@ -1,5 +1,5 @@
 .Explore {
-    background-color: #F7F5F1;
+    background-color: #F2F5FF;
     padding: 100px 0;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .Explore__heading p {
-    color: #644222;
+    color: #182244;
     text-transform: capitalize;
     font-size: 18px;
     font-weight: 700;
