--- a/frontend/src/component/make-appointment/MakeAppointment.css
+++ b/frontend/src/component/make-appointment/MakeAppointment.css
@@ -15,7 +15,7 @@
 }
 
 .MakeAppointment__header p {
-    color: rgb(110, 66, 34);
+    color: #182244;
     font-size: 18px;
     font-weight: 700;
 }
