--- a/frontend/src/component/testimonial/Testimonial.css
+++ b/frontend/src/component/testimonial/Testimonial.css
@@ -17,7 +17,7 @@
 }
 
 .Testimonial__content-subheading {
-    color: rgb(100, 66, 34);
+    color: #182244;
     font-size: 18px;
     font-weight: 700;
     line-height: 24px;
