--- a/frontend/src/element/card/SuitesCard.css
+++ b/frontend/src/element/card/SuitesCard.css
@@ -18,7 +18,7 @@
 .SuitesCard__bookingBtn button {
     border: 1px solid white;
     padding: 20px 40px;
-    background-color: #644222;
+    background-color: #ffaa34;
     color: white;
     font-size: 15px;
     font-weight: 700;
