--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,6 +34,21 @@
   color: #61dafb;
 }
 
+.App__whatsapp-icon {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 100;
+}
+
+.App__whatsapp-icon button {
+  background-color: transparent;
+  border: 2px solid white;
+  padding: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
