--- a/frontend/src/component/copyright/CopyRight.css
+++ b/frontend/src/component/copyright/CopyRight.css
@@ -1,7 +1,7 @@
 .copyRight__footer {
     padding: 20px 0;
   height: auto;
-  background-color: rgb(82, 78, 78);
+  background-color: #5D6D7E;
   color: white;
   display: flex;
   flex-direction: row;
