--- a/frontend/src/component/navbar/Navbar.css
+++ b/frontend/src/component/navbar/Navbar.css
@@ -1,5 +1,5 @@
 .Navbar {
-    background-color: rgb(100, 66, 34);
+    background-color: #1E2B54;
     position: fixed;
     width: 100vw;
     z-index: 100;
@@ -7,6 +7,7 @@
 
 .Navbar__logo img {
     padding: 10px;
+    margin-left: 10px;
     z-index: 100;
 }
 
@@ -30,24 +31,26 @@
 .Navbar__nav ul li a {
     color: white;
     text-decoration: none;
+    text-transform: uppercase;
 }
 
 .Navbar__nav ul li a:hover {
-    color: #be9874;
+    color: #ffba5a;
 }
 
 .Navbar__reservationbtn button {
-    background-color: #be9874;
+    background-color: #ffaa34;
     border-radius: none;
     padding: 16px 30px;
     border: none;
     color: white;
     text-transform: uppercase;
     cursor: pointer;
+    margin-right: 10px;
 }
 
-.Navbar__Reservationbtn button:hover {
-    background-color: #be9875;
+.Navbar__reservationbtn button:hover {
+    background-color: #ffba5a;
 }
 
 .Navbar__handburgermenu {
@@ -58,7 +61,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    background-color: rgb(100, 66, 34);
+    background-color: #1E2B54;
     width: 30%;
     height: 100vh;
     padding: 50px;
