--- a/frontend/src/element/card/ReviewCard.css
+++ b/frontend/src/element/card/ReviewCard.css
@@ -16,14 +16,14 @@
 }
 
 .ReviewCard__client h2 {
-    color: rgb(100, 66, 34);
+    color: #182244;
     font-size: 26px;
     font-weight: 700;
     margin-bottom: 15px;
 }
 
 .ReviewCard__client p {
-    color: rgb(100, 66, 34);
+    color: #182244;
     font-size: 16px;
     font-weight: 400;
 }
