--- a/frontend/src/element/card/ReviewCard.css
+++ b/frontend/src/element/card/ReviewCard.css
@@ -34,3 +34,9 @@
     font-weight: 400;
     line-height: 26px;
 }
+
+@media (max-width: 400px) {
+    .ReviewCard {
+        width: 280px;
+    }
+}
