--- a/frontend/src/element/card/SuitesCard.css
+++ b/frontend/src/element/card/SuitesCard.css
@@ -53,3 +53,9 @@
     justify-content: space-between;
     gap: 10px;
 }
+
+@media (max-width: 400px) {
+    .SuitesCard {
+        width: 380px;
+    }
+}
