--- a/frontend/src/component/about/About.css
+++ b/frontend/src/component/about/About.css
@@ -18,7 +18,7 @@
   padding: 16px 30px;
   border: none;
   color: white;
-  text-transform: uppercase;
+  text-transform: capitalize;
   cursor: pointer;
 }
 
