--- a/frontend/src/component/about/about-us/AboutUs.css
+++ b/frontend/src/component/about/about-us/AboutUs.css
@@ -48,7 +48,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 16px;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .About__image-main {
