--- a/frontend/src/component/home/Home.css
+++ b/frontend/src/component/home/Home.css
@@ -42,7 +42,7 @@
     border-style: none;
     border: 2px solid white;
     font-size: 17px;
-    text-transform: uppercase;
+    text-transform: capitalize;
     cursor: pointer;
 }
 
@@ -65,6 +65,7 @@
     }
 
     .Home__heading h1 {
+        margin-top: 30px;
         font-size: 70px;
         letter-spacing: 2px;
     }
