--- a/frontend/src/element/card/SuitesCard.css
+++ b/frontend/src/element/card/SuitesCard.css
@@ -8,7 +8,7 @@
 
 .SuitesCard__bookingBtn {
     position: absolute;
-    top: 53%;
+    top: 49%;
     transform: translateY(-50%);
     display: flex;
     width: 100%;
@@ -37,7 +37,7 @@
 }
 
 .SuitesCard__content {
-    padding: 30px;
+    padding: 40px 30px;
 }
 
 .SuitesCard__content h4 {
@@ -47,12 +47,17 @@
 
 .SuitesCard__content p {
     margin: 30px 0;
+    height: 220px;
+    overflow: scroll;
 }
 
 .SuitesCard__content-services {
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    gap: 10px;
+    justify-content: space-around;
 }
 
 @media (max-width: 400px) {
